CHANGE: Replaced sun base64 with apache codec; migrated all binary keys to an encoded format